--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,9 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                {% block content %}
+                {% block contenido %}
 
-                {% endblock content %}
+                {% endblock contenido %}
             </div>
         </div>
     </div>
