--- a/templates/partida/partida_crear.html
+++ b/templates/partida/partida_crear.html
@@ -5,7 +5,7 @@
         {% csrf_token %}
         {{form_j.as_p}}
         {{form_p.as_p}}
-       <button class="btn btn-primary" type="submit" >Crear</button>
+       <button class="btn btn-primary" type="submit" href="{% url 'partida' id_jugador=id %}">Crear</button>
     </form>
     
 {% endblock contenido %}
