--- a/templates/partida/partida.html
+++ b/templates/partida/partida.html
@@ -2,5 +2,6 @@
  
  {% block contenido %}
      <p>Hola {{jugador.nombre}}</p>
+     <p>Tu codigo para que otros jugadores se puedan unir a la partida es el siguiente <strong> {{registro.partida.codigo_ingreso}}</strong</p>
  {% endblock contenido %}
      
