--- a/templates/partida/inicio.html
+++ b/templates/partida/inicio.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block contenido %}
-    <a class="btn btn-primary" href="{% url 'partida_crear' %}"> Crear partida</a>
-    <a class="btn btn-primary" href="{% url 'partida_ingresar' %}"> Unirse</a>
+    <a class="btn btn-primary" href="{% url 'registro' %}"> Registrarse</a>
+    <a class="btn btn-primary" href="{% url 'login' %}"> Ingresar</a>
 {% endblock contenido %}
     
