--- a/templates/partida/partida_crear.html
+++ b/templates/partida/partida_crear.html
@@ -3,8 +3,8 @@
 {% block contenido %}
     <form action="" method="post">
         {% csrf_token %}
-        {{form_j.as_p}}
-        {{form_p.as_p}}
+        {{form_u.as_p}}
+        
        <button class="btn btn-primary" type="submit" >Crear</button>
     </form>
     
