--- a/templates/partida/partida_crear.html
+++ b/templates/partida/partida_crear.html
@@ -3,10 +3,11 @@
 {% block contenido %}
     <form action="" method="post">
         {% csrf_token %}
-        {{form_u.as_p}}
+        {{form_p.as_p}}
         
        <button class="btn btn-primary" type="submit" >Crear</button>
     </form>
+    
     
 {% endblock contenido %}
     
