--- a/templates/partida/perfil.html
+++ b/templates/partida/perfil.html
@@ -35,7 +35,7 @@
                             <th scope="row">{{ i.jugador_numero }}</th>
                             <td>{{ i.partida.codigo_ingreso }}</td>
                             <td> </td>
-                            <td><a typpe="button" class="btn btn-primary" href="{% url 'historial' id_atencion=i.id %}"></a></td>
+                            <td><a typpe="button" class="btn btn-primary" href="#"></a></td>
     
     
                         </tr>
