--- a/templates/partida/login.html
+++ b/templates/partida/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
 {% block contenido %}
 <form action="" method="post">
@@ -6,6 +6,12 @@
     {{form_l.as_p}}
     <input type="submit" value="Ingresar">
 </form>
-    
+<div class="container">
+    <div class="row">
+        <div class="col">
+
+        </div>
+    </div>
+</div>
+
 {% endblock contenido %}
-    
