--- a/templates/partida/perfil.html
+++ b/templates/partida/perfil.html
@@ -21,7 +21,7 @@
                         <tr>
                             <th scope="col">Numero de jugador</th>
                             <th scope="col">Codgio de partida</th>    
-                            <th scope="col">Estado deña partida</th>
+                            <th scope="col">Estado de la partida</th>
                             <th scope="col">Detalles</th>
                         </tr>
                     </thead>
