--- a/templates/partida/perfil.html
+++ b/templates/partida/perfil.html
@@ -9,7 +9,7 @@
         <br>
         <div class="d-grid gap-2 d-md-block">
             <a type="button" class="btn btn-primary" href="{% url 'partida_crear' %}">crear partida</a>
-            <a type="button" class="btn btn-primary" href="#">Unirse a partida</a>
+            <a type="button" class="btn btn-primary" href="{% url 'partida_ingresar' %}">Unirse a partida</a>
            
         </div>
     </div>
