--- a/templates/partida/partida_ingresar.html
+++ b/templates/partida/partida_ingresar.html
@@ -7,11 +7,14 @@
         
        <button class="btn btn-primary" type="submit" >Ingresar</button>
     </form>
-    {%if jsm %}
-        <p>{{jsm}}</p>
+    {%if err_validacion %} <!--Pintar error-->
+        <p>{{err_validacion}}</p>
     {% endif %}    
-    {%if mensaje %}
-        <p>{{mensaje}}</p>
+    {%if err_codigo %}
+        <p>{{err_codigo}}</p>
+    {% endif %}    
+    {%if err_partida %}
+        <p>{{err_partida}}</p>
     {% endif %}    
     
 {% endblock contenido %}
