--- a/templates/partida/perfil.html
+++ b/templates/partida/perfil.html
@@ -39,7 +39,7 @@
                             {% if i.partida.estado != 'activa'%}
                                 <td><p>No se puede ingresar a esta poartida</p></td>
                             {% else %}
-                            <td><input type="submit" value="ingresar"></td>
+                            <td><a type="button" href="{% url 'partida_detalle' id_partida=i.id %}">Ver</a></td>
                             {% endif %}
     
                         </tr>
