--- a/templates/partida/login.html
+++ b/templates/partida/login.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
 
 {% block contenido %}
+<h3>{{ msj }}</h3>
 <form action="" method="post">
     {% csrf_token %}
     {{form_l.as_p}}
     <input type="submit" value="Ingresar">
 </form>
-<div class="container">
+<div class="container mt-4">
     <div class="row">
         <div class="col">
-
+            <p> ¿No tienes un usuario?</p>
+            <a href="{% url 'registro'%}">Registrate</a>
         </div>
     </div>
 </div>
