--- a/templates/partida/partida_detalle.html
+++ b/templates/partida/partida_detalle.html
@@ -1,53 +1,75 @@
 {% extends 'base.html' %}
- 
- {% block contenido %}
-     <h3>Hola <strong>{{ registro.jugador.username}}</strong></h3>
-     <p>Tu codigo para que otros jugadores se puedan unir a la partida es el siguiente <strong> {{ registro.partida.codigo_ingreso }}</strong</p>
-        <div class="row mt-4">
-            <div class="col">
-                <h1>Tus partidas</h3>
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th scope="col">Numero de jugador</th>
-                                <th scope="col">Codgio de partida</th>    
-                                <th scope="col">Estado de la partida</th>
-                                <th scope="col">Detalles</th>
-                            </tr>
-                        </thead>
-        
-                        {% if registros %}
-                        <tbody>
-        
-        
-                            {% for i in registros %}
-        
-                            <tr>
-                                <th scope="row">{{ i.jugador_numero }}</th>
-                                <td>{{ i.partida.codigo_ingreso }}</td>
-                                <td>{{i.partida.estado}}</td>
-                                {% if i.partida.estado != 'activa'%}
-                                    <td><p>No se puede ingresar a esta poartida</p></td>
-                                {% else %}
-                                <td><a type="button" href="{% url 'partida_detalle' id_partida=i.id %}">Ver</a></td>
-                                {% endif %}
-        
-                            </tr>
-                            {% endfor %}
-        
-                        </tbody>
-                        {% else %}
-                        <div class="row">
-                            <div class="col justify-content-center">
-                                <br>
-                                <br>
-                                <h3>No existen registros en el momento</h3>
-                            </div>
-                        </div>
-                        {% endif %}
-                    </table>
+
+{% block contenido %}
+<h3>Hola <strong>{{ jugador.jugador.username}}</strong></h3>
+<br>
+<h5>Tu codigo para que otros jugadores se puedan unir a la partida es el siguiente: <strong>
+        {{jugador.partida.codigo_ingreso }}</strong></h5>
+<br>
+<div class="row">
+    <div class="col">
+        <a class="btn btn-primary" href="{% url 'perfil'%}">Volver a perfil</a>
+    </div>
+</div>
+
+<div class="row mt-4">
+    <div class="col">
+
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col">Numero del jugador</th>
+                    <th scope="col">Nombre del jugador</th>
+
+
+                </tr>
+            </thead>
+
+            {% if registros %}
+            <tbody>
+
+
+                {% for i in registros %}
+
+                <tr>
+                    <th scope="row">{{ i.jugador_numero }}</th>
+                    <td>{{ i.jugador.username }}</td>
+
+
+                </tr>
+                {% endfor %}
+
+            </tbody>
+            {% else %}
+            <div class="row">
+                <div class="col justify-content-center">
+                    <br>
+                    <br>
+                    <h3>No existen registros en el momento</h3>
+                </div>
             </div>
-        
-        </div>
- {% endblock contenido %}
-     
+
+            {% endif %}
+        </table>
+    </div>
+
+</div>
+{% if jugador.jugador_numero == 'jugador 1' %}
+{% if contador == 4 %}
+<div class="row">
+    <div class="col">
+        <form action="" method="post"></form>
+        <a class="btn btn-primary" href="{% url 'partida_play' id_partida=partida.id%}">Iniciar partida</a>
+    </div>
+</div>
+{% else %}
+<h2>Esperando completar los 4 jugadores</h2>
+{% endif %}
+{% else %}
+<h2>Espera a que el jugador 1 empiece la partida</h2>
+{% endif %}
+
+
+
+{% endblock contenido %}
+
