--- a/templates/partida/perfil.html
+++ b/templates/partida/perfil.html
@@ -20,7 +20,7 @@
                     <thead>
                         <tr>
                             <th scope="col">Numero de jugador</th>
-                            <th scope="col">Codgio de partida</th>    
+                            <th scope="col">Codigo de partida</th>    
                             <th scope="col">Estado de la partida</th>
                             <th scope="col">Detalles</th>
                         </tr>
@@ -39,7 +39,7 @@
                             {% if i.partida.estado != 'activa'%}
                                 <td><p>No se puede ingresar a esta poartida</p></td>
                             {% else %}
-                            <td><a type="button" href="{% url 'partida_detalle' id_partida=i.id %}">Ver</a></td>
+                            <td><a type="button" href="{% url 'partida_detalle' id_partida=i.partida.id %}">Ver</a></td>
                             {% endif %}
     
                         </tr>
