--- a/templates/partida/perfil.html
+++ b/templates/partida/perfil.html
@@ -39,7 +39,13 @@
                             {% if i.partida.estado != 'activa'%}
                                 <td><p>No se puede ingresar a esta poartida</p></td>
                             {% else %}
-                            <td><a type="button" href="{% url 'partida_detalle' id_partida=i.partida.id %}">Ver</a></td>
+                            <td>
+                                {% if jugador.cartas == None %}
+                                <a type="button" href="{% url 'partida_detalle' id_partida=i.partida.id %}">Ver</a>
+                                {%else%}
+                                <a type="button" href="{% url 'jugar' id_partida=i.partida.id %}">Retomar partida</a>
+                                {% endif %}
+                            </td>
                             {% endif %}
     
                         </tr>
