--- a/templates/cartas/juego.html
+++ b/templates/cartas/juego.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block head %}
+    
+{% endblock head %}
+    <meta http-equiv="Refresh" content="5">
 {% block contenido %}
 <!-- simulacion cartas ocultas -->
 <div class="row">
