--- a/templates/partida/partida_detalle.html
+++ b/templates/partida/partida_detalle.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 
 {% block contenido %}
-<h3>Hola <strong>{{ jugador.jugador.username}}</strong></h3>
+<br><br>
+<h1>Hola <strong>{{ jugador.jugador.username}}</strong></h1>
 <br>
-<h5>Tu codigo para que otros jugadores se puedan unir a la partida es el siguiente: <strong>
-        {{jugador.partida.codigo_ingreso }}</strong></h5>
+<h3>Tu codigo para que otros jugadores se puedan unir a la partida es el siguiente: <strong>
+        {{jugador.partida.codigo_ingreso }}</strong></h3>
 <br>
 <div class="row">
     <div class="col">
-        <a class="btn btn-primary" href="{% url 'perfil'%}">Volver a perfil</a>
+        <a class="btn shop_bt" href="{% url 'perfil'%}">Volver a perfil</a>
     </div>
 </div>
 
@@ -61,7 +62,7 @@
     </div>
 </div>
 {% else %}
-<p>Esperando completar los 4 jugadores</p>
+<h3>Esperando completar los 4 jugadores</h3>
 {% endif %}
 {% else %}
 <h2>Espere que el jugador 1 inicie la partida</h2>
