--- a/templates/cartas/juego.html
+++ b/templates/cartas/juego.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    
+    <meta http-equiv="Refresh" content="5">
 {% endblock head %}
     <meta http-equiv="Refresh" content="5">
 {% block contenido %}
@@ -15,13 +15,13 @@
     <div class="col-7">
         <div class="row">
             <div class="col-2">
-                <img src="{% static 'img/carta.png' %}" width="200" height="320" alt="">
+                <img src="{% static 'img/carta.png' %}" width="200" height="100px" alt="">
             </div>
             <div class="col-2">
-                <img src="{% static 'img/carta.png' %}" width="200" height="320" alt="">
+                <img src="{% static 'img/carta.png' %}" width="200" height="100px" alt="">
             </div>
             <div class="col-2">
-                <img src="{% static 'img/carta.png' %}" width="200" height="320" alt="">
+                <img src="{% static 'img/carta.png' %}" width="200" height="100px" alt="">
             </div>
         </div>
         
@@ -32,7 +32,11 @@
     <h3>Mis Tarjetas</h3>
     {% for c in cartas %}
         <p>
-            <img src="/media/{{ c.imagen }}" height="60px" alt="">
+            
+            {% if c.imagen %}
+                <img src="/media/{{ c.imagen }}" width="80" height="60" alt="">   
+            {% endif %}
+                
             {{ c }}
         </p>
     {% endfor %}
